# Unai

./: .gitignore  README.md  app.py  main.py  priority.json  requirements.txt  run.bat  sessions.db  sessions.json  settings.json  setup.py  setup_venv.bat  start.bat  unai.md  unai.py  unai_core.py
skills/: priority.json
skills/calc/: help.txt  meta.json  skill.py
skills/ddgs/: help.txt  meta.json  skill.py
skills/ddgs_chatbot/: help.txt  meta.json  skill.py  valves.json
skills/greeting/: help.txt  meta.json  skill.py
skills/joke/: help.txt  meta.json  skill.py
skills/valves_test/: help.txt  meta.json  skill.py  valves.json
skills/wikipedia/: help.txt  meta.json  request_urls.txt  skill.py
static/: app copy.js  app.js  styles.css
templates/: claude_index.html.backup  index.html  skills.html
unai-package/: LICENSE  PACKAGE_README.md  README.md  pyproject.toml
unai-package/unai/: README.md  __init__.py
