[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unai"
version = "1.0.0"
description = "A secure HTTP request library with URL filtering"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PixelNest256", email = "pixn256@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.7"
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/unai/unai"
Repository = "https://github.com/unai/unai"
"Bug Tracker" = "https://github.com/unai/unai/issues"

[tool.setuptools]
packages = ["unai"]
